--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -73,21 +73,14 @@
         </nav>
     </header>
     <div class="container">
-        <div class="card">
-            <h2>Card 1</h2>
-            <h3>Subtitle 1</h3>
-            <p>Description for Card 1 goes here. This is a simple example card.</p>
-        </div>
-        <div class="card">
-            <h2>Card 2</h2>
-            <h3>Subtitle 2</h3>
-            <p>Description for Card 2 goes here. You can add more cards as needed.</p>
-        </div>
-        <div class="card">
-            <h2>Card 3</h2>
-            <h3>Subtitle 3</h3>
-            <p>Description for Card 3 goes here. Customize the content as per your requirements.</p>
-        </div>
+        <% blogs.forEach((blog)=>{ %>
+            <div class="card">
+                <h2><%- blog.title %></h2>
+                <h3><%- blog.subTitle %> </h3>
+                <p><%- blog.description %></p>
+            </div>
+
+       <% }) %>
     </div>
 </body>
 </html>
