--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -73,14 +73,21 @@
         </nav>
     </header>
     <div class="container">
-        <% blogs.forEach((blog)=>{ %>
-            <div class="card">
-                <h2><%- blog.title %></h2>
-                <h3><%- blog.subTitle %> </h3>
-                <p><%- blog.description %></p>
-            </div>
+        <% if(blogs.length == 0){ %>
+            <h1>No Blogs </h1>
+       <%  }else{ %>
+            <% blogs.forEach((blog)=>{ %>
+                <div class="card">
+                    <h2><%- blog.title %></h2>
+                    <h3><%- blog.subTitle %> </h3>
+                    <p><%- blog.description %></p>
+                    <a href="/single/<%- blog.id %>">Read more</a>
+                </div>
 
-       <% }) %>
+            <% }) %>
+
+        <% }  %>
+        
     </div>
 </body>
 </html>
