--- a/views/singleBlog.ejs
+++ b/views/singleBlog.ejs
@@ -87,6 +87,7 @@
         <!-- here toISOString() is to remove unecessary time zone data and slice cut and throw the data outside the parameter -->
         Published on <%- blog[0].createdAt.toISOString().slice(0,10) %> 
     </div>
+    <button><a href="/delete/<%- blog[0].id %>">Delete</a></button>
     </div>
 
 </body>
