--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -4,74 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Web Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        }
+    <link rel="stylesheet" href="../css/blogs.css">
 
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 20px;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 20px auto;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-        }
-
-        .card {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-            padding: 20px;
-            width: 30%;
-        }
-
-        .card h2 {
-            font-size: 24px;
-            margin: 0;
-        }
-
-        .card h3 {
-            font-size: 18px;
-            color: #777;
-            margin: 5px 0;
-        }
-
-        .card p {
-            font-size: 16px;
-            line-height: 1.5;
-        }
-    </style>
 </head>
 <body>
-    <header>
-        <h1>CMS</h1>
-        <nav>
-            <a href="/createBlogs">AddBlogs</a>
-        </nav>
-    </header>
+    
+    <%- include("components/navbar.ejs") %>
+
+
+
     <div class="container">
         <% if(blogs.length == 0){ %>
             <h1>No Blogs </h1>
@@ -89,5 +30,8 @@
         <% }  %>
         
     </div>
+
+
+    <%- include("components/footer.ejs") %>
 </body>
 </html>
